--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -55,8 +55,9 @@ jobs:
     - name: Install packages
       # This is all BS to get random dependencies to cross compile and I hate it
       run: |
-        # sudo dpkg --add-architecture arm64
-        # sudo dpkg --add-architecture armhf
+        sudo cp .github/workflows/sources.list /etc/apt/sources.list
+        sudo dpkg --add-architecture arm64
+        sudo dpkg --add-architecture armhf
         sudo apt-get update
         sudo apt-get install gcc-arm-linux-gnueabihf gcc-aarch64-linux-gnu g++-arm-linux-gnueabihf g++-aarch64-linux-gnu libc-dev-armhf-cross libc-dev-arm64-cross libfreetype6-dev:arm64 libfreetype6-dev:armhf libfontconfig-dev:arm64 libfontconfig-dev:armhf
     - name: Prep build environment
