--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -72,9 +72,11 @@ jobs:
         rustup target add ${{ matrix.target }}
         cargo install cargo-deb --force
         cargo install cargo-generate-rpm --force
-    - name: Package
+    - name: Package DEB
       run: |
         cargo deb --target ${{ matrix.target }}
+    - name: Package RPM
+      run: |
         cargo generate-rpm --target ${{ matrix.target }}
     - uses: actions/upload-artifact@v3
       with:
