--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -6,6 +6,12 @@ on:
   pull_request:
     branches: [ master ]
   workflow_dispatch:
+    inputs:
+      debug_enabled:
+        type: boolean
+        description: 'Run the build with tmate debugging enabled (https://github.com/marketplace/actions/debugging-with-tmate)'
+        required: false
+        default: false
 
 env:
   CARGO_TERM_COLOR: always
@@ -86,3 +92,7 @@ jobs:
       with:
         name: deb-${{ matrix.target }}
         path: target/${{ matrix.target }}/generate-rpm/*.rpm
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
+      with:
+        detached: true
