--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -72,7 +72,7 @@ jobs:
       with:
         detached: true
       if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
-    - name: Build in Release
+    - name: Build Release
       run: |
         cargo build --release --target ${{ matrix.target }}
     - name: Prep build environment
