--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -91,8 +91,8 @@ jobs:
         cargo deb --target ${{ matrix.target }}
     - name: Package RPM
       run: |
-        cp -r ./target/${{ matrix.target }}/release ./target
-        cargo generate-rpm --target ${{ matrix.target }}
+        # cp -r ./target/${{ matrix.target }}/release ./target
+        cargo generate-rpm --target-dir ./target --target ${{ matrix.target }}
     - uses: actions/upload-artifact@v3
       with:
         name: deb-rpm-${{ matrix.target }}
